crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-1.stderr
error[E0119]: conflicting implementations of trait `ink::reflect::DispatchableMessageInfo<1083895717>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-1.rs:41:9
   |
36 |         fn message(&self) {}
   |         -------------------- first implementation here
...
41 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `ink::codegen::TraitCallForwarderFor<1083895717>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-1.rs:39:5
   |
34 | /     impl TraitDefinition1 for Contract {
35 | |         #[ink(message)]
36 | |         fn message(&self) {}
37 | |     }
   | |_____- first implementation here
38 |
39 | /     impl TraitDefinition2 for Contract {
40 | |         #[ink(message)]
41 | |         fn message(&self) {}
42 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder`
